objects/TW1_Participacao_diaria__c.object
<CustomObject>
    <fields>
        <fullName>Formas_de_Pagamento__c</fullName>
        <label>Formas de Pagamento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dinheiro</fullName>
                </value>
                <value>
                    <fullName>Cartão Crédito</fullName>
                </value>
                <value>
                    <fullName>Cartão Debito</fullName>
                    <label>Cartão Débito</label>
                </value>
                <value>
                    <fullName>Cartão Caixa</fullName>
                </value>
                <value>
                    <fullName>Cartão Caixa ELO</fullName>
                </value>
                <value>
                    <fullName>Visa Vale</fullName>
                </value>
                <value>
                    <fullName>Visa Platinum</fullName>
                </value>
                <value>
                    <fullName>Visa Infinite</fullName>
                </value>
                <value>
                    <fullName>Clube Rio Design</fullName>
                </value>
                <value>
                    <fullName>Dinheiro(FDS)</fullName>
                </value>
                <value>
                    <fullName>Cartão Débito(FDS)</fullName>
                </value>
                <value>
                    <fullName>Cartão Crédito(FDS)</fullName>
                </value>
                <value>
                    <fullName>Aplicativo</fullName>
                </value>
                <value>
                    <fullName>Aplicativo(FDS)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Antigo__c</fullName>
        <formula>TW1_Participante__r.TW1_Antigo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Antigo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>PersonAccount</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Participações diárias</relationshipLabel>
        <relationshipName>Participacoes_diarias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Data_de_participacao__c</fullName>
        <label>Data de participação</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Formas_de_Pagamento__c</fullName>
        <label>Formas de Pagamento</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dinheiro</fullName>
                </value>
                <value>
                    <fullName>Cartão Crédito</fullName>
                </value>
                <value>
                    <fullName>Cartão Caixa</fullName>
                </value>
                <value>
                    <fullName>Cartão Caixa ELO</fullName>
                </value>
                <value>
                    <fullName>Visa Vale</fullName>
                </value>
                <value>
                    <fullName>Visa Platinum</fullName>
                </value>
                <value>
                    <fullName>Visa Infinite</fullName>
                </value>
                <value>
                    <fullName>Cartão Debito</fullName>
                    <label>Cartão Débito</label>
                </value>
                <value>
                    <fullName>Clube Rio Design</fullName>
                </value>
                <value>
                    <fullName>Dinheiro(FDS)</fullName>
                </value>
                <value>
                    <fullName>Cartão Débito(FDS)</fullName>
                </value>
                <value>
                    <fullName>Cartão Crédito(FDS)</fullName>
                </value>
                <value>
                    <fullName>Aplicativo</fullName>
                </value>
                <value>
                    <fullName>Aplicativo(FDS)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Novo__c</fullName>
        <formula>TW1_Participante__r.TW1_Novo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Novo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Parametros_da_Promocao__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parâmetros da Promoção</label>
        <referenceTo>TW1_Parametros_Promocao__c</referenceTo>
        <relationshipLabel>Participações diárias</relationshipLabel>
        <relationshipName>Participacoes_diarias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Part_Mais_1__c</fullName>
        <formula>IF(
AND(
TW1_Participante__r.TW1_Menor_data__c &lt;&gt; TW1_Data_de_participacao__c,
TW1_Participante__r.TW1_Qtde_participacao__c  &gt; 1)
,true
,false
)</formula>
        <label>Part. Mais de 1 Vez</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Participante__c</fullName>
        <label>Participante</label>
        <referenceTo>Participante__c</referenceTo>
        <relationshipLabel>Participações diárias</relationshipLabel>
        <relationshipName>TW1_Participacoes_diarias</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TW1_Regional__c</fullName>
        <formula>TEXT(TW1_Shopping_Lookup__r.TW1_Regional__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_SGL__c</fullName>
        <formula>TW1_Participante__r.TW1_Shopping__r.TW1_SGL_Empreendimento__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SGL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Semana__c</fullName>
        <formula>CASE( MOD(  TW1_Data_de_participacao__c - DATE(1900, 1, 7), 7), 0, &quot;Domingo&quot;, 1, &quot;Segunda&quot;, 2, &quot;Terça&quot;, 3,
&quot;Quarta&quot;, 4, &quot;Quinta&quot;, 5, &quot;Sexta&quot;, 6, &quot;Sábado&quot;,&quot;Erro&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Semana</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Shopping_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shopping</label>
        <referenceTo>TW1_Shopping__c</referenceTo>
        <relationshipLabel>Participações diárias</relationshipLabel>
        <relationshipName>Participacoes_diarias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Valor__c</fullName>
        <label>Valor (R$)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Participação diária</label>
    <nameField>
        <displayFormat>PD#{0000000}</displayFormat>
        <label>Part. Diária</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participações diárias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>